--- a/styles/contact.css
+++ b/styles/contact.css
@@ -155,6 +155,15 @@
 .input-area.ia-ed2 {
     margin-top: 30px;
 }
+.contact-error-message {
+    font-size: 12px;
+    color: red;
+    margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.erm-ed {
+    color: rgb(28, 175, 28);
+}
 
 
 .third-btn {
