--- a/styles/contact.css
+++ b/styles/contact.css
@@ -75,7 +75,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 }
@@ -221,14 +221,14 @@
 }
 
 .rate-layer {
-    background-color: rgba(0, 0, 0, 0.863);
+    background-color: rgba(0, 0, 0, 0.932);
     width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 100;
-    filter: blur(100px);
+    filter: blur(25px);
 } 
 
 .rate--remove {
